<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">导航</string>
    <string name="app_currency_close">关闭</string>
    <string name="app_currency_back">返回</string>
    <string name="permission_quest_fail">权限申请失败</string>
    <string name="permission_quest_dialog_commit">确定</string>
    <string name="permission_quest_dialog_cancel">取消</string>
    <string name="startup_sdk_init_fail">高德引擎初始化失败</string>
    <string name="reminder_use_agreement">用户条款和个人信息保护政策</string>
    <string name="reminder_click_to_view">点击查看</string>
    <string name="reminder_page_service">《高德服务条款》</string>
    <string name="reminder_page_privacy">《高德隐私权政策》</string>
    <string name="loading_url">加载中</string>
    <string name="load_url_failed">未能成功获取协议内容</string>
    <string name="load_url_retry">重试</string>
    <string name="service_terms_url_light">https://cache.amap.com/h5/h5/publish/241/index.html</string>
    <string name="service_terms_url_dark">https://cache.amap.com/h5/h5/publish/241/index.html</string>
    <string name="privacy_policy_url_light">https://cache.amap.com/h5/h5/publish/238/index.html</string>
    <string name="privacy_policy_url_dark">https://cache.amap.com/h5/h5/publish/238/index.html</string>
    <string name="reminder_page_service_title">高德服务条款</string>
    <string name="reminder_page_privacy_title">高德隐私权政策</string>
    <string name="reminder_user_terms_personal_info">高德地图使用提示\n
        1.欢迎您使用高德地图！请在使用本软件前认真阅读和充分理解《高德服务条款》和《高德隐私权政策》，您开始使用即表示您已同意前述文件。\n
        2.请您不要在驾驶车辆的同时操作或注视本软件，务必在确保安全的前提下使用本软件，以防发生交通事故或其他危险情况。\n
        3.本软件提供的地点查询、路线规划、出行导航、交通路况等功能和服务仅供您参考，请不要以此作为您行驶或出行的唯一依据。请您以实际的交通和道路状况为准，并严格遵守交通法律法规和交通规则。\n
        4.我们建议您在使用本软件前下载离线地图数据，以确保您在车辆断网的情况下可以继续使用本软件的离线地图服务。如您的车机内未安装离线地图数据，则本软件的全部功能需联网后才可使用，软件功能和服务的质量将严重依赖于车机的网络状态；若因为网络原因导致本软件全部或者部分功能不可用，请您向您的电信服务商或者车辆生产商寻求帮助。\n
        5.本软件的部分功能需联网后才可使用。您使用在线导航、交通路况、数据下载等联网的功能时会消耗网络流量，因此产生的流量费由您的电信服务商收取，具体收费标准请向其咨询。</string>
    <string name="reminder_dialog_commit">确定</string>
    <string name="reminder_dialog_cancel">取消</string>
    <string name="reminder_page_service_content">
        1.1在使用高德提供的软件、网站、服务(统称为"高德产品或服务"，包括但不限于适用于电脑、移动智能终端、车载导航仪、智能后视镜、行车记录仪的产品及服务、高德地图开放平台产品及服务)之前，请您务必认真阅读并充分理解《高德服务条款》、《高德隐私权政策》以及开通或使用某项服务的附加条款(统称为"高德服务协议")，特别是关于特别提示、个人信息保护、接收邮件及消息、担保与保保证、免责及责任限制、争议解决等条款，该类条款可能以粗体下划线方式进行标识请您注意重点阅读。
        \n1.2如果您对本条款有疑问，请您通过高德客服渠道进行询问，高德将向您解释本条款内容。一旦您开始使用高德产品或服务，即表示您已经理解并同意相关协议，该协议即构成对您具有法律约束力的法律文件
        \n1.3您声明您有充分的权力、能力和权限来同意和履行本条款。如果您代表您的雇主或客户同意本条款，您声明您有充分的法律律授权使您的雇主或客户受到本条款的约束。如果您没有充分的法律授权，请您确保由您的雇主或客户的授权人士来同意本条款。
        \n1.4高德重视未成年人的安全及个人信息保护，如您为未成年人，请您务必在您的监护人仔细阅读高德服务协议并同意的前提下使用我们的产品或服务或向我们提供信息；如您违反法律法规或高德服务协议内容使用高德产品或服务，造成的一切后果由您及您的监护人承担。
    </string>
    <string name="reminder_page_privacy_content">
        欢迎您使用我们的产品和服务！我们深知个人信息对您的重要性，您的信赖对我们非常重要，我们将严格遵守法律法规要求采取相应的安全保护措施，致力于保护您的个人信息安全可控。基于此，高德（或简称“我们”）制定本《高德隐私权政策》（下称“本政策”/“本隐私政策”），帮助您充分了解在您使用我们产品和服务的过程中，我们会如何收集、使用、共享、存储和保护您的个人信息以及您可以如何管理您的个人信息，以便您更好地作出适当的选择。
        在您开始使用我们的产品和服务前，请您务必先仔细阅读和理解本政策，特别应重点阅读我们以粗体/粗体下划线标识的条款，确保您充分理解和同意之后再开始使用。除本政策外，在特定场景下，我们还会通过即时告知（含消息、公告等）、功能更新说明等方式，向您说明对应的信息收集目的、范围及使用方式，这些即时告知及功能更新说明等构成本政策的一部分，并与本政策具有同等效力。本政策中涉及的专业词汇，我们尽量以简明通俗的表述向您解释，以便于您理解。如对本政策内容有任何疑问、意见或建议，您可通过本政策文末的联系方式与我们联系。
        根据《常见类型移动互联网应用程序必要个人信息范围规定》，高德地图为地图导航类应用，基本功能为定位和导航，为实现基本功能所需要处理的必要个人信息为位置信息、出发地、到达地。如您同意本隐私政策，仅代表同意使用基本功能时处理相关个人信息，如您使用高德地图其他扩展功能，我们会在您使用具体扩展功能时另行征求您的同意。
    </string>
    <string name="engine_init_fail">引擎初始化失败</string>
    <string name="engineering_panel_entrance">工程面板入口</string>
    <string name="test_mapcenter">自车位</string>
    <string name="test_route">发起算路</string>
    <string name="test_sim_navi">选路第一条</string>
    <string name="test_start_navi">开始导航</string>
    <string name="test_offline_data">离线数据初始化</string>
    <string name="test_list_city_data">获取所有城市信息</string>
    <string name="test_current_city_data">查询当前城市数据</string>
    <string name="test_key_city_data">查询“海”城市数据</string>
    <string name="test_insert_city_data">插入数据</string>
    <string name="test_query_city_data">查询数据</string>
    <string name="test_delete_city_data">删除数据</string>
    <string name="test_stop_navi">结束导航</string>
    <string name="test_open_cluster_activity">仪表上屏</string>
    <string name="test_close_cluster_activity">仪表下屏</string>
    <string name="test_start_debug">打开调试</string>
    <string name="test_stop_debug">关闭调试</string>
    <string name="test_setting">设置</string>
    <string name="test_account">账户</string>
    <string name="test_calibration">标定</string>
    <string name="test_signal">can信号</string>
    <string name="test_start_record">开始录制回放</string>
    <string name="test_stop_record">停止录制回放</string>
    <string name="test_record_play">开始播放回放</string>
    <string name="test_record_stop">停止播放回放</string>
    <string name="test_copy_bllog">复制高德日志到U盘</string>
    <string name="test_copy_complete">复制完成</string>
    <string name="test_copy_cancel">取消复制</string>
    <string name="test_no_usb">没有找到U盘</string>
    <string name="map_go_setting">去设置</string>
    <string name="map_in_around">在附近</string>
    <string name="map_mfc_text">短按旋钮以进行地图移动或缩放</string>
    <string name="car_connect_is_success">手车互联成功</string>
    <string name="main_search_hint">搜索目的地</string>
    <string name="no_search_history">暂无历史记录</string>
    <string name="along_way_search_title">沿途搜</string>
    <string name="along_way_search_hint">沿途去哪儿，都能搜</string>
    <string name="around_search_title">在%s附近搜索</string>
    <string name="around_search_title_current_location">当前位置</string>
    <string name="offline_title">离线地图</string>
    <string name="offline_search_tip">请输入简体中文、拼音或首字母</string>
    <string name="offline_recommend_map">推荐下载</string>
    <string name="offline_text_all_data">全部城市</string>
    <string name="offline_near_offline_data">附近城市推荐</string>
    <string name="offline_text_administration">下载管理</string>
    <string name="offline_item_province_title">省份</string>
    <string name="offline_item_city_title">基础功能包</string>
    <string name="offline_item_city_tip">新</string>
    <string name="offline_item_city_data">0MB</string>
    <string name="offline_item_city_status">下载</string>
    <string name="offline_base_map_tip">跨区域导航必备</string>
    <string name="offline_current_map_tip">上海市  0MB</string>
    <string name="offline_near_data_count">x个城市  共xMB</string>
    <string name="offline_current_map_title">当前城市</string>
    <string name="offline_city_downloading">下载中</string>
    <string name="offline_city_downloaded">已下载</string>
    <string name="offline_all_net_city_start_download">全部下载</string>
    <string name="offline_prov_city_start_download">全省下载</string>
    <string name="offline_all_city_start_download">全部开始</string>
    <string name="offline_all_city_suspend_download">全部暂停</string>
    <string name="offline_delete_city_data">删除</string>
    <string name="offline_empty_tip">暂无数据</string>
    <string name="offline_no_search_hint">没有找到相关城市</string>
    <string name="offline_manager_map_title">下载管理</string>
    <string name="offline_manager_map_content">个城市下载更新中…</string>
    <string name="offline_manager_map_downloading">正在下载</string>
    <string name="offline_manager_map_no_downloaded">"无已下载城市</string>
    <string name="offline_manager_map_no_downloading">无下载任务</string>
    <string name="offline_manager_map_downloading_size_start">以下</string>
    <string name="offline_manager_map_downloading_size_end">个城市下载成功</string>
    <string name="offline_item_delete_message">基础功能包为离线跨城导航必备数据，推荐下载</string>
    <string name="offline_item_cancel_delete">暂不下载</string>
    <string name="offline_dialog_download_continue_title">继续下载提醒</string>
    <string name="offline_dialog_download_pause_title">暂停下载提醒</string>
    <string name="offline_dialog_download_continue">继续下载</string>
    <string name="offline_dialog_download_pause">暂停下载</string>
    <string name="offline_dialog_download_cancel">取消下载</string>
    <string name="route_along_search">途径点</string>
    <string name="route_long_screen_via_num">%s个途径点</string>
    <string name="route_long_screen_edit_via">编辑途径点</string>
    <string name="route_long_screen_add_via">添加途径点</string>
    <string name="route_long_screen_added">还可以添加%s个</string>
    <string name="route_energy_replenishment_planning">补能规划</string>
    <string name="route_charging_station">充电</string>
    <string name="route_gas_station">加油</string>
    <string name="route_weather">天气</string>
    <string name="route_along_service">服务区</string>
    <string name="route_reatirction_limittipstypenoplate">设置车牌， 避开限行</string>
    <string name="route_reatirction_limittipstypenotopen">打开避开限行功能， 避开限行区域</string>
    <string name="route_reatirction_limittipstypeavoidsuccess">已为您避开限行区域</string>
    <string name="route_reatirction_limittipstyperegionstart">起点在限行区域内，请合理安排出行时间</string>
    <string name="route_reatirction_limittipstyperegionend">终点在限行区域内，请合理安排出行时间</string>
    <string name="route_reatirction_limittipstyperegionvia">途经点在限行区域内，请合理安排出行时间</string>
    <string name="route_reatirction_limittipstyperegioncross">无法避开限行区域，请合理安排出行时间</string>
    <string name="route_reatirction_limittipstypenetwork">当前网络不佳，无法避开限行，请尝试刷新</string>
    <string name="route_avoid_road">避开路段</string>
    <string name="route_sim_navi">模拟导航</string>
    <string name="route_avoid">避开</string>
    <string name="route_refresh">刷新</string>
    <string name="route_change_preference">偏好设置</string>
    <string name="route_preference">路线偏好</string>
    <string name="route_preference_recommend">推荐路线</string>
    <string name="route_preference_avoiding_congestion">躲避拥堵</string>
    <string name="route_preference_less_charge">少收费</string>
    <string name="route_preference_not_highway">不走高速</string>
    <string name="route_preference_first_highway">高速优先</string>
    <string name="route_preference_first_main_road">大路优先</string>
    <string name="route_preference_fastest_speed">时间优先</string>
    <string name="route_preference_avoiding_congestion_and_less_charge">躲避拥堵+少收费</string>
    <string name="route_preference_avoiding_congestion_and_not_highway">不走高速+躲避拥堵</string>
    <string name="route_preference_avoiding_congestion_and_first_highway">躲避拥堵+高速优先</string>
    <string name="route_preference_less_charge_and_not_highway">少收费+不走高速</string>
    <string name="route_preference_avoiding_congestion_and_less_charge_not_highway">躲避拥堵+少收费+不走高速</string>
    <string name="route_preference_avoiding_congestion_and_first_main_road">躲避拥堵+大路优先</string>
    <string name="account_login">登录</string>
    <string name="favorite_tip">暂无收藏地址</string>
    <string name="favorite_add">添加地址</string>
    <string name="favorite_no_charging">暂无数据</string>
    <string name="favorite_no_charging_tip">请先登录SGM账号后再试试</string>
    <string name="favorite_no_charging_data">暂未收藏专属充电站</string>
    <string name="favorite_charging_request_fail">数据获取失败，请刷新</string>
    <string name="favorite_charging_offline">无网络连接，请检查网络后重试</string>
    <string name="driving_record_details_title">行程详情</string>
    <string name="driving_record_details_cost">10月2日  16:35</string>
    <string name="driving_record_details_level">巡航</string>
    <string name="driving_record_details_start">外高桥保税区</string>
    <string name="driving_record_details_end">中山公园</string>
    <string name="driving_record_details_count">99.1</string>
    <string name="driving_record_details_unit">km</string>
    <string name="driving_record_details_content">导航里程</string>
    <string name="driving_record_details_time">1:08:09</string>
    <string name="driving_record_details_time_unit">驾驶时长</string>
    <string name="driving_record_details_speed">106</string>
    <string name="driving_record_details_speed_unit">km/h</string>
    <string name="driving_record_details_speed_content">平均速度</string>
    <string name="driving_record_details_fast_speed">126</string>
    <string name="driving_record_details_fast_speed_unit">km/h</string>
    <string name="driving_record_details_fast_speed_content">最快速度</string>
</resources>