<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="ViewModel"
            type="com.sgm.navi.hmi.drivingrecord.recorddetails.DrivingRecordDetailsViewModel" />
    </data>

    <com.sgm.navi.ui.view.SkinConstraintLayout
        android:layout_width="@dimen/dp_613"
        android:layout_height="@dimen/dp_519"
        android:background="@drawable/bg_shadow_navi_ndlc_8155"
        android:padding="@dimen/dp_34">
        <!--标题-->
        <com.sgm.navi.ui.view.SkinImageView
            clickCommand="@{ViewModel.mDrivingRecordDetailsBack}"
            android:layout_width="@dimen/dp_49"
            android:layout_height="@dimen/dp_49"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_27"
            android:src="@drawable/img_setting_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.sgm.navi.ui.view.SkinTextView
            android:id="@+id/driving_record_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_37"
            android:text="@string/driving_record_details_title"
            android:textColor="@color/setting_bg_tab_text_select"
            android:textSize="@dimen/sp_29"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.sgm.navi.ui.view.SkinImageView
            android:id="@+id/delete_driving_record"
            clickCommand="@{ViewModel.mDeleteRecord}"
            android:layout_width="@dimen/dp_49"
            android:layout_height="@dimen/dp_49"
            android:layout_marginTop="@dimen/dp_27"
            android:layout_marginEnd="@dimen/dp_20"
            android:src="@drawable/img_driving_record_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.sgm.navi.ui.view.SkinConstraintLayout
            android:id="@+id/cl_driving_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_35"
            app:layout_constraintTop_toBottomOf="@id/driving_record_title">

            <!--起点-->
            <com.sgm.navi.ui.view.SkinView
                android:id="@+id/item_driving_start_img"
                android:layout_width="@dimen/dp_13"
                android:layout_height="@dimen/dp_13"
                android:layout_marginStart="@dimen/dp_34"
                android:background="@drawable/bg_start_point"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sgm.navi.ui.view.SkinTextView
                android:id="@+id/details_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:text="@string/driving_record_details_start"
                android:textColor="@color/setting_bg_tab_text_unselect"
                android:textSize="@dimen/sp_25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_driving_start_img"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sgm.navi.ui.view.SkinTextView
                android:id="@+id/details_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_39"
                android:text="@string/driving_record_details_cost"
                android:textColor="@color/setting_bg_tab_text_unselect"
                android:textSize="@dimen/sp_22"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.sgm.navi.ui.view.SkinConstraintLayout>
        <!--终点-->
        <com.sgm.navi.ui.view.SkinConstraintLayout
            android:id="@+id/cl_driving_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@id/cl_driving_start">

            <com.sgm.navi.ui.view.SkinView
                android:id="@+id/item_driving_end_img"
                android:layout_width="@dimen/dp_13"
                android:layout_height="@dimen/dp_13"
                android:layout_marginStart="@dimen/dp_34"
                android:background="@drawable/bg_end_point"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sgm.navi.ui.view.SkinTextView
                android:id="@+id/details_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:text="@string/driving_record_details_end"
                android:textColor="@color/setting_bg_tab_text_unselect"
                android:textSize="@dimen/sp_25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_driving_end_img"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sgm.navi.ui.view.SkinTextView
                android:id="@+id/details_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_39"
                android:text="@string/driving_record_details_level"
                android:textColor="@color/setting_bg_tab_text_unselect"
                android:textSize="@dimen/sp_22"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.sgm.navi.ui.view.SkinConstraintLayout>

        <com.sgm.navi.ui.view.SkinView
            android:id="@+id/details_end_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_34"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_34"
            android:background="@color/color_20_000000"
            app:layout_constraintTop_toBottomOf="@+id/cl_driving_end" />

        <!--导航里程-->
        <com.sgm.navi.ui.view.SkinConstraintLayout
            android:id="@+id/details_guide_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_34"
            android:layout_marginTop="@dimen/dp_22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_end_view">

            <com.sgm.navi.ui.view.SkinTextView
                android:id="@+id/details_guide_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driving_record_details_count"
                android:textColor="@color/setting_bg_tab_text_select"
                android:textSize="@dimen/sp_29"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sgm.navi.ui.view.SkinTextView
                android:id="@+id/details_guide_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driving_record_details_unit"
                android:textColor="@color/setting_bg_tab_text_select"
                android:textSize="@dimen/sp_29"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/details_guide_count"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sgm.navi.ui.view.SkinTextView
                android:id="@+id/details_guide_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driving_record_details_content"
                android:textColor="@color/setting_bg_tab_text_unselect"
                android:textSize="@dimen/sp_25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_guide_count" />
        </com.sgm.navi.ui.view.SkinConstraintLayout>
        <!--驾驶时长-->
        <com.sgm.navi.ui.view.SkinConstraintLayout
            android:id="@+id/details_guide_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_172"
            app:layout_constraintStart_toEndOf="@+id/details_guide_view"
            app:layout_constraintTop_toTopOf="@+id/details_guide_view">

            <com.sgm.navi.ui.view.SkinTextView
                android:id="@+id/details_guide_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driving_record_details_time"
                android:textColor="@color/setting_bg_tab_text_select"
                android:textSize="@dimen/sp_29"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sgm.navi.ui.view.SkinTextView
                android:id="@+id/details_guide_time_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driving_record_details_time_unit"
                android:textColor="@color/setting_bg_tab_text_unselect"
                android:textSize="@dimen/sp_25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_guide_time" />
        </com.sgm.navi.ui.view.SkinConstraintLayout>
        <!--平均速度-->
        <com.sgm.navi.ui.view.SkinConstraintLayout
            android:id="@+id/details_guide_speed_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_21"
            app:layout_constraintStart_toStartOf="@+id/details_guide_view"
            app:layout_constraintTop_toBottomOf="@+id/details_guide_view">

            <com.sgm.navi.ui.view.SkinTextView
                android:id="@+id/details_guide_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driving_record_details_speed"
                android:textColor="@color/setting_bg_tab_text_select"
                android:textSize="@dimen/sp_29"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sgm.navi.ui.view.SkinTextView
                android:id="@+id/details_guide_speed_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driving_record_details_speed_unit"
                android:textColor="@color/setting_bg_tab_text_select"
                android:textSize="@dimen/sp_29"
                app:layout_constraintStart_toEndOf="@+id/details_guide_speed"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sgm.navi.ui.view.SkinTextView
                android:id="@+id/details_guide_speed_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/driving_record_details_speed_content"
                android:textColor="@color/setting_bg_tab_text_unselect"
                android:textSize="@dimen/sp_25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_guide_speed" />
        </com.sgm.navi.ui.view.SkinConstraintLayout>
        <!--最快速度-->
        <com.sgm.navi.ui.view.SkinConstraintLayout
            android:id="@+id/details_guide_fast_speed_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/details_guide_time_view"
            app:layout_constraintTop_toTopOf="@+id/details_guide_speed_view">

            <com.sgm.navi.ui.view.SkinTextView
                android:id="@+id/details_guide_fast_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driving_record_details_fast_speed"
                android:textColor="@color/setting_bg_tab_text_select"
                android:textSize="@dimen/sp_29"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sgm.navi.ui.view.SkinTextView
                android:id="@+id/details_guide_fast_speed_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driving_record_details_fast_speed_unit"
                android:textColor="@color/setting_bg_tab_text_select"
                android:textSize="@dimen/sp_29"
                app:layout_constraintStart_toEndOf="@+id/details_guide_fast_speed"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sgm.navi.ui.view.SkinTextView
                android:id="@+id/details_guide_fast_speed_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driving_record_details_fast_speed_content"
                android:textColor="@color/setting_bg_tab_text_unselect"
                android:textSize="@dimen/sp_25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_guide_fast_speed" />
        </com.sgm.navi.ui.view.SkinConstraintLayout>
    </com.sgm.navi.ui.view.SkinConstraintLayout>
</layout>
